test/parse/expr/bad-globalget-name-undefined.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module (func global.get $n))
(;; STDERR ;;;
out/test/parse/expr/bad-globalget-name-undefined.txt:3:26: error: undefined global variable "$n"
(module (func global.get $n))
                         ^^
;;; STDERR ;;)
